[tool.poetry]
name = "todolist"
version = "0.1.0"
description = ""
authors = ["Klaus Gibin <gibin.klaus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
sqlalchemy = "^2.0.36"
pydantic = "^2.9.2"
streamlit = "^1.39.0"
fastapi = "^0.115.3"
pydantic-settings = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
